docs/api/v/2024.2.3/ui/text.md
#![](../../../../../../images/luxe-dark.svg){width="96em"}

# `luxe` API (`2024.2.3`)  


---

## `luxe: ui/text` module

- [UIText](#uitext)   

---

### UIText
`:::js import "luxe: ui/text" for UIText`
> no docs found

- [create](#UIText.create)(**ui_entity**: `Any`)
- [set_text](#UIText.set_text+2)(**control**: `Any`, **text**: `Any`)
- [get_text](#UIText.get_text)(**control**: `Any`)
- [set_font](#UIText.set_font+2)(**control**: `Any`, **font**: `Any`)
- [get_font](#UIText.get_font)(**control**: `Any`)
- [set_color](#UIText.set_color+2)(**control**: `Any`, **color**: `Any`)
- [get_color](#UIText.get_color)(**control**: `Any`)
- [set_text_size](#UIText.set_text_size+2)(**control**: `Any`, **size**: `Any`)
- [get_text_size](#UIText.get_text_size)(**control**: `Any`)
- [set_align](#UIText.set_align+2)(**control**: `Any`, **align**: `Any`)
- [get_align](#UIText.get_align)(**control**: `Any`)
- [set_align_vertical](#UIText.set_align_vertical+2)(**control**: `Any`, **align**: `Any`)
- [get_align_vertical](#UIText.get_align_vertical)(**control**: `Any`)
- [select_all](#UIText.select_all)(**control**: `Any`)
- [invalidate](#UIText.invalidate+2)(**control**: `Control`, **change_before**: `String`)
- [set_outline](#UIText.set_outline+5)(**control**: `UIText`, **radius**: `Num`, **softness**: `Num`, **color**: `Color`, **offset**: `Float2`)
- [set_shadow](#UIText.set_shadow+5)(**control**: `UIText`, **radius**: `Num`, **softness**: `Num`, **color**: `Color`, **offset**: `Float2`)

<hr/>
<endpoint module="luxe: ui/text" class="UIText" signature="create(ui_entity : Any)"></endpoint>
<signature id="UIText.create">UIText.create(**ui_entity**: `Any`)
<a class="headerlink" href="#UIText.create" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js UIText`
> no docs found   

<endpoint module="luxe: ui/text" class="UIText" signature="set_text(control : Any, text : Any)"></endpoint>
<signature id="UIText.set_text+2">UIText.set_text(**control**: `Any`, **text**: `Any`)
<a class="headerlink" href="#UIText.set_text+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/text" class="UIText" signature="get_text(control : Any)"></endpoint>
<signature id="UIText.get_text">UIText.get_text(**control**: `Any`)
<a class="headerlink" href="#UIText.get_text" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/text" class="UIText" signature="set_font(control : Any, font : Any)"></endpoint>
<signature id="UIText.set_font+2">UIText.set_font(**control**: `Any`, **font**: `Any`)
<a class="headerlink" href="#UIText.set_font+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/text" class="UIText" signature="get_font(control : Any)"></endpoint>
<signature id="UIText.get_font">UIText.get_font(**control**: `Any`)
<a class="headerlink" href="#UIText.get_font" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/text" class="UIText" signature="set_color(control : Any, color : Any)"></endpoint>
<signature id="UIText.set_color+2">UIText.set_color(**control**: `Any`, **color**: `Any`)
<a class="headerlink" href="#UIText.set_color+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/text" class="UIText" signature="get_color(control : Any)"></endpoint>
<signature id="UIText.get_color">UIText.get_color(**control**: `Any`)
<a class="headerlink" href="#UIText.get_color" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/text" class="UIText" signature="set_text_size(control : Any, size : Any)"></endpoint>
<signature id="UIText.set_text_size+2">UIText.set_text_size(**control**: `Any`, **size**: `Any`)
<a class="headerlink" href="#UIText.set_text_size+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/text" class="UIText" signature="get_text_size(control : Any)"></endpoint>
<signature id="UIText.get_text_size">UIText.get_text_size(**control**: `Any`)
<a class="headerlink" href="#UIText.get_text_size" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/text" class="UIText" signature="set_align(control : Any, align : Any)"></endpoint>
<signature id="UIText.set_align+2">UIText.set_align(**control**: `Any`, **align**: `Any`)
<a class="headerlink" href="#UIText.set_align+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/text" class="UIText" signature="get_align(control : Any)"></endpoint>
<signature id="UIText.get_align">UIText.get_align(**control**: `Any`)
<a class="headerlink" href="#UIText.get_align" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/text" class="UIText" signature="set_align_vertical(control : Any, align : Any)"></endpoint>
<signature id="UIText.set_align_vertical+2">UIText.set_align_vertical(**control**: `Any`, **align**: `Any`)
<a class="headerlink" href="#UIText.set_align_vertical+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/text" class="UIText" signature="get_align_vertical(control : Any)"></endpoint>
<signature id="UIText.get_align_vertical">UIText.get_align_vertical(**control**: `Any`)
<a class="headerlink" href="#UIText.get_align_vertical" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/text" class="UIText" signature="select_all(control : Any)"></endpoint>
<signature id="UIText.select_all">UIText.select_all(**control**: `Any`)
<a class="headerlink" href="#UIText.select_all" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/text" class="UIText" signature="invalidate(control : Control, change_before : String)"></endpoint>
<signature id="UIText.invalidate+2">UIText.invalidate(**control**: `Control`, **change_before**: `String`)
<a class="headerlink" href="#UIText.invalidate+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/text" class="UIText" signature="set_outline(control : UIText, radius : Num, softness : Num, color : Color, offset : Float2)"></endpoint>
<signature id="UIText.set_outline+5">UIText.set_outline(**control**: `UIText`, **radius**: `Num`, **softness**: `Num`, **color**: `Color`, **offset**: `Float2`)
<a class="headerlink" href="#UIText.set_outline+5" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js None`
> Set the text outline parameters.   

<endpoint module="luxe: ui/text" class="UIText" signature="set_shadow(control : UIText, radius : Num, softness : Num, color : Color, offset : Float2)"></endpoint>
<signature id="UIText.set_shadow+5">UIText.set_shadow(**control**: `UIText`, **radius**: `Num`, **softness**: `Num`, **color**: `Color`, **offset**: `Float2`)
<a class="headerlink" href="#UIText.set_shadow+5" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js None`
> Set the text shadow parameters.   

